--- a/sample.html
+++ b/sample.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>GIT<title>[D[D[D[D[D[D/[C[C[C[C[C[D[D[D[D[Dt[C[C[D[Di[2~tl[2~e>
+ <title>GIT<title>
 </head>
 <body>
-<p>elcome to GIt</p>
-</body>[A[D[D[D[Dwelcome to git</p>[B
+<p>welcome to GIt</p>
+</body>Dwelcome to git</p>
